<resources>
    <string name="app_name">GeoQuiz_3_1</string>
    <string name="question_texteasy">Sanaa is a capital of Yemen</string>
    <string name="question_text1_easy">Sanaa is a capital of Yemen</string>
    <string name="question_text2_easy">Treem is a valley on Yemen</string>
    <string name="question_text3_easy">Dar AlHajar is a museum  on Dubai</string>
    <string name="question_text4_easy"> Eb is desert</string>
    <string name="question_text5_easy">Soqtra is a governor on Yemen</string>
    <string name="question_text6_easy">Amran is a land</string>
    <string name="question_text7_mud">Aleskandreai is in Egypt</string>
    <string name="question_text8_mud">Al Amazeeg is a Country</string>
    <string name="question_text9_mud">Al Neil is in Athuobbai</string>
    <string name="question_text10_mud">Homas is a governor in Phlastain</string>
    <string name="question_text11_mud">Aseer  is a plantgrand</string>
    <string name="question_text12_mud">Babal is  in Iraq</string>
    <string name="question_text13_diffuc">Hamborg is governor in Germany </string>
    <string name="question_text14_diffuc">The Language of Canada is Deutsch</string>
    <string name="question_text15_diffuc">The Seconde of the big Country in the world is Egypt </string>
    <string name="question_text16_diffuc">Vena is existing in America</string>
    <string name="question_text17_diffuc">Madrid is a capital of spain </string>
    <string name="question_text18_diffuc">Th Bortgali is a language of Brazil</string>
    <string name="true_button">True</string>
    <string name="level">level</string>
    <string name="Sdk_ApI">SdK Api</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="ExplinePrev">Previous</string>
    <string name="ExplineNext">Next</string>
    <string name="score_text">Score</string>score_text
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>